--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ media
 
 sensitive_data.json
 sb-admin-pro_no-source
-
+Wozia-Django_v1.0.0
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
