--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ media
 sensitive_data.json
 sb-admin-pro_no-source
 Wozia-Django_v1.0.0
+*.vscode
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
